--- a/popup.html
+++ b/popup.html
@@ -7,9 +7,9 @@
   <body>
     <h1>G.E.R.O.</h1>
     <button id="enableButton"></button>
+    -- Search Method --
     <div id="methodsList"></div>
-    <div id="counterBar">
-    </div>
+    <div id="counterBar"></div>
     <script src="popup.js"></script>
   </body>
 </html>
